--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "next-compose-plugins": "^2.2.1",
+    "next-template": "file:",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.13",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
