--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,9 +20,11 @@
     "next-compose-plugins": "^2.2.1",
     "next-template": "file:",
     "next-transpile-modules": "^10.0.1",
+    "next-video": "^1.1.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.16.0",
     "styled-components": "^6.1.13",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
